<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>dubtest1</artifactId>
  <version>1.0-SNAPSHOT</version>

  <repositories>
    <repository>
      <id>com.e-iceblue</id>
      <name>e-iceblue</name>
      <url>https://repo.e-iceblue.com/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>AsposeJavaAPI</id>
      <name>Aspose Java API</name>
      <url>https://repository.aspose.com/repo/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>5.1.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.14.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/org.apache.poi.xwpf.converter.pdf -->
    <dependency>
      <groupId>fr.opensagres.xdocreport</groupId>
      <artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
      <version>1.0.6</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/fr.opensagres.xdocreport.converter -->
    <dependency>
      <groupId>fr.opensagres.xdocreport</groupId>
      <artifactId>fr.opensagres.xdocreport.converter</artifactId>
      <version>2.0.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/e-iceblue/spire.doc.free -->
    <dependency>
      <groupId>e-iceblue</groupId>
      <artifactId>spire.doc.free</artifactId>
      <version>3.9.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/fr.opensagres.poi.xwpf.converter.pdf -->
    <dependency>
      <groupId>fr.opensagres.xdocreport</groupId>
      <artifactId>fr.opensagres.poi.xwpf.converter.pdf</artifactId>
      <version>2.0.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/fr.opensagres.xdocreport/fr.opensagres.xdocreport.converter -->
    <dependency>
      <groupId>com.aspose</groupId>
      <artifactId>aspose-words</artifactId>
      <version>20.1</version>
      <classifier>jdk17</classifier>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-scratchpad</artifactId>
      <version>5.1.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-api -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-api</artifactId>
      <version>1.1.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-util-conversion -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-util-conversion</artifactId>
      <version>1.1.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-transformer -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-transformer</artifactId>
      <version>1.1.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-util-all -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-util-all</artifactId>
      <version>1.1.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-local -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-local</artifactId>
      <version>1.1.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.32</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.8.0-beta4</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-util-standalone -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-util-standalone</artifactId>
      <version>1.1.7</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.documents4j/documents4j-transformer-msoffice-word -->
    <dependency>
      <groupId>com.documents4j</groupId>
      <artifactId>documents4j-transformer-msoffice-word</artifactId>
      <version>1.1.7</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>23.0</version>
    </dependency>
    <dependency>
      <groupId>fr.opensagres</groupId>
      <artifactId>org.apache.poi.xwpf.converter</artifactId>
      <version>0.9.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.docx4j/docx4j -->
    <dependency>
      <groupId>org.docx4j</groupId>
      <artifactId>docx4j</artifactId>
      <version>6.1.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itext7-core</artifactId>
      <version>7.2.1</version>
      <type>pom</type>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.itextpdf/io -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>io</artifactId>
      <version>7.2.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itextpdf</artifactId>
      <version>5.5.13.2</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.itextpdf/root -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>root</artifactId>
      <version>7.2.1</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>kernel</artifactId>
      <version>7.2.1</version>
      <type>pom</type>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.itextpdf/layout -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>layout</artifactId>
      <version>7.2.1</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>io</artifactId>
      <version>7.2.1</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>forms</artifactId>
      <version>7.2.1</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>pdfa</artifactId>
      <version>7.2.1</version>
    </dependency>
  </dependencies>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

</project>